--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 
+@layer utilities {
+  .paused {
+    animation-play-state: paused;
+  }
+}
+
 
 body{
   overflow-x: hidden;
